Localized the manual search screen

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -454,5 +454,101 @@
   "settingsTermsOfServicePageContactUs": "Kontaktieren Sie uns",
   "settingsTermsOfServicePageContactUsText": "Wenn Sie Fragen zu diesen Bedingungen haben, kontaktieren Sie uns bitte unter ",
   "settingsTermsOfServicePageLastUpdated": "Zuletzt aktualisiert: 9. April 2025",
-  "settingsPageDeletingData": "Daten werden gelöscht..."
+  "settingsPageDeletingData": "Daten werden gelöscht...",
+
+  "jobCardSwiperWaitingForConnection": "Warten auf Internetverbindung...",
+  "jobCardSwiperRetry": "Wiederholen",
+  "jobCardSwiperLoadingRecommendations": "Stellenempfehlungen werden geladen...",
+  "jobCardSwiperOfflineNotice": "Sie sind offline. Einige Funktionen können eingeschränkt sein.",
+  "jobCardDeadline": "Frist:",
+  "jobCardJobDetails": "Stellendetails",
+  "jobCardMonths": "Monate",
+  "jobCardEducationRequirements": "Bildungsanforderungen",
+  "jobCardRequiredLanguages": "Erforderliche Sprachen",
+  "jobCardVisaSupport": "Visa-Unterstützung",
+  "jobCardRelatedFields": "Verwandte Bereiche",
+  "jobCardTapToSeeSkills": "Tippen für Fähigkeiten",
+  "jobCardSkillsRequirements": "Fähigkeiten & Anforderungen",
+  "jobCardTechnicalSkills": "Technische Fähigkeiten",
+  "jobCardSoftSkills": "Soft Skills",
+  "jobCardNiceToHave": "Wünschenswert",
+  "jobCardTapToSeeDetails": "Tippen für Details",
+  "jobCardNotSpecified": "Nicht angegeben",
+  "jobCardInvalidDate": "Ungültiges Datum",
+  "jobCardNotAvailable": "N/A",
+  "jobCardNotFound": "Nicht gefunden",
+
+  "workModeRemote": "Remote",
+  "workModeHybrid": "Hybrid",
+  "workModeOnSite": "Vor Ort",
+
+  "jobSearchTitle": "Jobsuche",
+  "jobSearchScrollToDiscover": "Scrollen Sie, um mehr Jobs zu entdecken",
+  "jobSearchNoInternetConnection": "Keine Internetverbindung",
+  "jobSearchNoJobsFound": "Keine Jobs gefunden",
+  "jobSearchCheckConnection": "Bitte überprüfen Sie Ihre Verbindung und versuchen Sie es erneut",
+  "jobSearchTryAdjustingFilters": "Versuchen Sie, Ihre Filter oder Suchanfrage anzupassen",
+  "jobSearchRetry": "Wiederholen",
+  "jobSearchResetFilters": "Filter zurücksetzen",
+  "jobSearchOfflineNotice": "Sie sind offline. Die Suchfunktion ist eingeschränkt.",
+  "jobSearchNoInternetSnackbar": "Keine Internetverbindung. Bitte überprüfen Sie Ihr Netzwerk und versuchen Sie es erneut.",
+  "jobSearchErrorLoading": "Fehler beim Laden der Jobs: {error}",
+  "jobSearchAddedToFavorites": "{jobName} zu Favoriten hinzugefügt",
+  
+  "jobFiltersTitle": "Jobs filtern",
+  "jobFiltersResetAll": "Alle zurücksetzen",
+  "jobFiltersSearch": "Suchen",
+  "jobFiltersSearchPlaceholder": "Jobs, Titel suchen...",
+  "jobFiltersCompany": "Unternehmen",
+  "jobFiltersCompanyPlaceholder": "Firmennamen eingeben",
+  "jobFiltersLocation": "Standort",
+  "jobFiltersLocationPlaceholder": "Standort/Land eingeben",
+  "jobFiltersDuration": "Dauer",
+  "jobFiltersField": "Bereich",
+  "jobFiltersWorkMode": "Arbeitsweise",
+  "jobFiltersSkills": "Fähigkeiten",
+  "jobFiltersApplyFilters": "Filter anwenden",
+  "jobFiltersSelected": "Ausgewählt",
+  
+  "jobListItemKeySkills": "Wichtige Fähigkeiten:",
+  "jobListItemRelatedFields": "Verwandte Bereiche:",
+  "jobListItemViewDetails": "Details anzeigen",
+  "jobListItemSave": "Speichern",
+  "jobListItemNotSpecified": "Nicht angegeben",
+  "jobListItemInvalid": "Ungültig",
+  "jobListItemExpired": "Abgelaufen",
+  "jobListItemToday": "Heute",
+  "jobListItemTomorrow": "Morgen",
+  "jobListItemDaysLeft": "{days}T übrig",
+
+  "jobDetails": "Stellendetails",
+  "openInBrowser": "Im Browser öffnen",
+  "location": "Standort",
+  "deadline": "Bewerbungsfrist",
+  "workMode": "Arbeitsmodell",
+  "salary": "Gehalt",
+  "duration": "Dauer",
+  "monthsCount": "{count, plural, =1{1 Monat} other{{count} Monate}}",
+  "timeCommitment": "Zeitaufwand",
+  "season": "Saison",
+  "visaHelp": "Visa-Hilfe",
+  "jobDetailsTitle": "Stellendetails",
+  "educationRequirements": "Bildungsanforderungen",
+  "requiredDegree": "Erforderlicher Abschluss",
+  "graduationYears": "Abschlussjahre",
+  "skillsAndQualifications": "Fähigkeiten & Qualifikationen",
+  "technicalSkills": "Technische Fähigkeiten",
+  "softSkills": "Soziale Kompetenzen",
+  "languages": "Sprachen",
+  "niceToHave": "Wünschenswert",
+  "jobDescription": "Stellenbeschreibung",
+  "requirements": "Anforderungen",
+  "applyNow": "Jetzt bewerben",
+  "notSpecified": "Nicht angegeben",
+  "expired": "Abgelaufen",
+  "today": "Heute",
+  "tomorrow": "Morgen",
+  "inDays": "In {count} Tagen",
+  "monthDay": "{month, select, 1{Jan} 2{Feb} 3{Mär} 4{Apr} 5{Mai} 6{Jun} 7{Jul} 8{Aug} 9{Sep} 10{Okt} 11{Nov} 12{Dez} other{}} {day}",
+  "invalidDate": "Ungültiges Datum"
 }
