--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -453,5 +453,101 @@
   "settingsTermsOfServicePageContactUs": "Contáctenos",
   "settingsTermsOfServicePageContactUsText": "Si tiene alguna pregunta sobre estos Términos, por favor contáctenos en ",
   "settingsTermsOfServicePageLastUpdated": "Última actualización: 9 de abril de 2025",
-  "settingsPageDeletingData": "Eliminando datos..."
+  "settingsPageDeletingData": "Eliminando datos...",
+
+  "jobCardSwiperWaitingForConnection": "Esperando conexión a internet...",
+  "jobCardSwiperRetry": "Reintentar",
+  "jobCardSwiperLoadingRecommendations": "Cargando recomendaciones de trabajo...",
+  "jobCardSwiperOfflineNotice": "Estás sin conexión. Algunas funciones pueden estar limitadas.",
+  "jobCardDeadline": "Fecha límite:",
+  "jobCardJobDetails": "Detalles del Trabajo",
+  "jobCardMonths": "meses",
+  "jobCardEducationRequirements": "Requisitos Educativos",
+  "jobCardRequiredLanguages": "Idiomas Requeridos",
+  "jobCardVisaSupport": "Soporte de Visa",
+  "jobCardRelatedFields": "Campos Relacionados",
+  "jobCardTapToSeeSkills": "Toca para ver habilidades",
+  "jobCardSkillsRequirements": "Habilidades y Requisitos",
+  "jobCardTechnicalSkills": "Habilidades Técnicas",
+  "jobCardSoftSkills": "Habilidades Blandas",
+  "jobCardNiceToHave": "Deseable",
+  "jobCardTapToSeeDetails": "Toca para ver detalles",
+  "jobCardNotSpecified": "No especificado",
+  "jobCardInvalidDate": "Fecha inválida",
+  "jobCardNotAvailable": "N/A",
+  "jobCardNotFound": "No encontrado",
+
+  "workModeRemote": "Remoto",
+  "workModeHybrid": "Híbrido",
+  "workModeOnSite": "Presencial",
+
+  "jobSearchTitle": "Búsqueda de Trabajos",
+  "jobSearchScrollToDiscover": "Desplázate para descubrir más trabajos",
+  "jobSearchNoInternetConnection": "Sin conexión a internet",
+  "jobSearchNoJobsFound": "No se encontraron trabajos",
+  "jobSearchCheckConnection": "Por favor revisa tu conexión e inténtalo de nuevo",
+  "jobSearchTryAdjustingFilters": "Intenta ajustar tus filtros o consulta de búsqueda",
+  "jobSearchRetry": "Reintentar",
+  "jobSearchResetFilters": "Restablecer Filtros",
+  "jobSearchOfflineNotice": "Estás desconectado. La funcionalidad de búsqueda está limitada.",
+  "jobSearchNoInternetSnackbar": "Sin conexión a internet. Por favor revisa tu red e inténtalo de nuevo.",
+  "jobSearchErrorLoading": "Error al cargar trabajos: {error}",
+  "jobSearchAddedToFavorites": "{jobName} agregado a favoritos",
+  
+  "jobFiltersTitle": "Filtrar Trabajos",
+  "jobFiltersResetAll": "Restablecer Todo",
+  "jobFiltersSearch": "Buscar",
+  "jobFiltersSearchPlaceholder": "Buscar trabajos, títulos...",
+  "jobFiltersCompany": "Empresa",
+  "jobFiltersCompanyPlaceholder": "Ingresa el nombre de la empresa",
+  "jobFiltersLocation": "Ubicación",
+  "jobFiltersLocationPlaceholder": "Ingresa ubicación/país",
+  "jobFiltersDuration": "Duración",
+  "jobFiltersField": "Campo",
+  "jobFiltersWorkMode": "Modalidad de Trabajo",
+  "jobFiltersSkills": "Habilidades",
+  "jobFiltersApplyFilters": "Aplicar Filtros",
+  "jobFiltersSelected": "Seleccionado",
+  
+  "jobListItemKeySkills": "Habilidades Clave:",
+  "jobListItemRelatedFields": "Campos Relacionados:",
+  "jobListItemViewDetails": "Ver Detalles",
+  "jobListItemSave": "Guardar",
+  "jobListItemNotSpecified": "No especificado",
+  "jobListItemInvalid": "Inválido",
+  "jobListItemExpired": "Expirado",
+  "jobListItemToday": "Hoy",
+  "jobListItemTomorrow": "Mañana",
+  "jobListItemDaysLeft": "{days}d restantes",
+
+  "jobDetails": "Detalles del Trabajo",
+  "openInBrowser": "Abrir en navegador",
+  "location": "Ubicación",
+  "deadline": "Fecha límite",
+  "workMode": "Modalidad de Trabajo",
+  "salary": "Salario",
+  "duration": "Duración",
+  "monthsCount": "{count, plural, =1{1 mes} other{{count} meses}}",
+  "timeCommitment": "Compromiso de Tiempo",
+  "season": "Temporada",
+  "visaHelp": "Ayuda con Visa",
+  "jobDetailsTitle": "Detalles del Trabajo",
+  "educationRequirements": "Requisitos Educativos",
+  "requiredDegree": "Título Requerido",
+  "graduationYears": "Años de Graduación",
+  "skillsAndQualifications": "Habilidades y Calificaciones",
+  "technicalSkills": "Habilidades Técnicas",
+  "softSkills": "Habilidades Blandas",
+  "languages": "Idiomas",
+  "niceToHave": "Deseable",
+  "jobDescription": "Descripción del Trabajo",
+  "requirements": "Requisitos",
+  "applyNow": "Aplicar Ahora",
+  "notSpecified": "No especificado",
+  "expired": "Expirado",
+  "today": "Hoy",
+  "tomorrow": "Mañana",
+  "inDays": "En {count} días",
+  "monthDay": "{month, select, 1{Ene} 2{Feb} 3{Mar} 4{Abr} 5{May} 6{Jun} 7{Jul} 8{Ago} 9{Sep} 10{Oct} 11{Nov} 12{Dic} other{}} {day}",
+  "invalidDate": "Fecha inválida"
 }
