--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -454,5 +454,101 @@
   "settingsTermsOfServicePageContactUs": "Nous Contacter",
   "settingsTermsOfServicePageContactUsText": "Si vous avez des questions sur ces Conditions, veuillez nous contacter à ",
   "settingsTermsOfServicePageLastUpdated": "Dernière mise à jour : 9 avril 2025",
-  "settingsPageDeletingData": "Suppression des données..."
+  "settingsPageDeletingData": "Suppression des données...",
+
+  "jobCardSwiperWaitingForConnection": "En attente de connexion internet...",
+  "jobCardSwiperRetry": "Réessayer",
+  "jobCardSwiperLoadingRecommendations": "Chargement des recommandations d'emploi...",
+  "jobCardSwiperOfflineNotice": "Vous êtes hors ligne. Certaines fonctionnalités peuvent être limitées.",
+  "jobCardDeadline": "Date limite :",
+  "jobCardJobDetails": "Détails du Poste",
+  "jobCardMonths": "mois",
+  "jobCardEducationRequirements": "Exigences Éducatives",
+  "jobCardRequiredLanguages": "Langues Requises",
+  "jobCardVisaSupport": "Support Visa",
+  "jobCardRelatedFields": "Domaines Connexes",
+  "jobCardTapToSeeSkills": "Touchez pour voir les compétences",
+  "jobCardSkillsRequirements": "Compétences et Exigences",
+  "jobCardTechnicalSkills": "Compétences Techniques",
+  "jobCardSoftSkills": "Compétences Relationnelles",
+  "jobCardNiceToHave": "Souhaitable",
+  "jobCardTapToSeeDetails": "Touchez pour voir les détails",
+  "jobCardNotSpecified": "Non spécifié",
+  "jobCardInvalidDate": "Date invalide",
+  "jobCardNotAvailable": "N/A",
+  "jobCardNotFound": "Non trouvé",
+
+  "workModeRemote": "À distance",
+  "workModeHybrid": "Hybride",
+  "workModeOnSite": "Sur site",
+
+  "jobSearchTitle": "Recherche d'Emploi",
+  "jobSearchScrollToDiscover": "Faites défiler pour découvrir plus d'emplois",
+  "jobSearchNoInternetConnection": "Pas de connexion internet",
+  "jobSearchNoJobsFound": "Aucun emploi trouvé",
+  "jobSearchCheckConnection": "Veuillez vérifier votre connexion et réessayer",
+  "jobSearchTryAdjustingFilters": "Essayez d'ajuster vos filtres ou votre requête de recherche",
+  "jobSearchRetry": "Réessayer",
+  "jobSearchResetFilters": "Réinitialiser les Filtres",
+  "jobSearchOfflineNotice": "Vous êtes hors ligne. La fonctionnalité de recherche est limitée.",
+  "jobSearchNoInternetSnackbar": "Pas de connexion internet. Veuillez vérifier votre réseau et réessayer.",
+  "jobSearchErrorLoading": "Erreur lors du chargement des emplois: {error}",
+  "jobSearchAddedToFavorites": "{jobName} ajouté aux favoris",
+  
+  "jobFiltersTitle": "Filtrer les Emplois",
+  "jobFiltersResetAll": "Tout Réinitialiser",
+  "jobFiltersSearch": "Rechercher",
+  "jobFiltersSearchPlaceholder": "Rechercher emplois, titres...",
+  "jobFiltersCompany": "Entreprise",
+  "jobFiltersCompanyPlaceholder": "Entrez le nom de l'entreprise",
+  "jobFiltersLocation": "Localisation",
+  "jobFiltersLocationPlaceholder": "Entrez localisation/pays",
+  "jobFiltersDuration": "Durée",
+  "jobFiltersField": "Domaine",
+  "jobFiltersWorkMode": "Mode de Travail",
+  "jobFiltersSkills": "Compétences",
+  "jobFiltersApplyFilters": "Appliquer les Filtres",
+  "jobFiltersSelected": "Sélectionné",
+  
+  "jobListItemKeySkills": "Compétences Clés:",
+  "jobListItemRelatedFields": "Domaines Connexes:",
+  "jobListItemViewDetails": "Voir les Détails",
+  "jobListItemSave": "Sauvegarder",
+  "jobListItemNotSpecified": "Non spécifié",
+  "jobListItemInvalid": "Invalide",
+  "jobListItemExpired": "Expiré",
+  "jobListItemToday": "Aujourd'hui",
+  "jobListItemTomorrow": "Demain",
+  "jobListItemDaysLeft": "{days}j restants",
+
+  "jobDetails": "Détails de l'Emploi",
+  "openInBrowser": "Ouvrir dans le navigateur",
+  "location": "Localisation",
+  "deadline": "Date limite",
+  "workMode": "Mode de Travail",
+  "salary": "Salaire",
+  "duration": "Durée",
+  "monthsCount": "{count, plural, =1{1 mois} other{{count} mois}}",
+  "timeCommitment": "Engagement Temporel",
+  "season": "Saison",
+  "visaHelp": "Aide Visa",
+  "jobDetailsTitle": "Détails de l'Emploi",
+  "educationRequirements": "Exigences Éducatives",
+  "requiredDegree": "Diplôme Requis",
+  "graduationYears": "Années de Diplôme",
+  "skillsAndQualifications": "Compétences et Qualifications",
+  "technicalSkills": "Compétences Techniques",
+  "softSkills": "Compétences Relationnelles",
+  "languages": "Langues",
+  "niceToHave": "Souhaitable",
+  "jobDescription": "Description du Poste",
+  "requirements": "Exigences",
+  "applyNow": "Postuler Maintenant",
+  "notSpecified": "Non spécifié",
+  "expired": "Expiré",
+  "today": "Aujourd'hui",
+  "tomorrow": "Demain",
+  "inDays": "Dans {count} jours",
+  "monthDay": "{month, select, 1{Jan} 2{Fév} 3{Mar} 4{Avr} 5{Mai} 6{Jun} 7{Jul} 8{Aoû} 9{Sep} 10{Oct} 11{Nov} 12{Déc} other{}} {day}",
+  "invalidDate": "Date invalide"
 }
