--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -453,5 +453,101 @@
   "settingsTermsOfServicePageContactUs": "Contattateci",
   "settingsTermsOfServicePageContactUsText": "Se avete domande su questi Termini, vi preghiamo di contattarci a ",
   "settingsTermsOfServicePageLastUpdated": "Ultimo aggiornamento: 9 aprile 2025",
-  "settingsPageDeletingData": "Eliminazione dati..."
+  "settingsPageDeletingData": "Eliminazione dati...",
+
+  "jobCardSwiperWaitingForConnection": "In attesa di connessione internet...",
+  "jobCardSwiperRetry": "Riprova",
+  "jobCardSwiperLoadingRecommendations": "Caricamento raccomandazioni di lavoro...",
+  "jobCardSwiperOfflineNotice": "Sei offline. Alcune funzionalità potrebbero essere limitate.",
+  "jobCardDeadline": "Scadenza:",
+  "jobCardJobDetails": "Dettagli del Lavoro",
+  "jobCardMonths": "mesi",
+  "jobCardEducationRequirements": "Requisiti Educativi",
+  "jobCardRequiredLanguages": "Lingue Richieste",
+  "jobCardVisaSupport": "Supporto Visto",
+  "jobCardRelatedFields": "Campi Correlati",
+  "jobCardTapToSeeSkills": "Tocca per vedere le competenze",
+  "jobCardSkillsRequirements": "Competenze e Requisiti",
+  "jobCardTechnicalSkills": "Competenze Tecniche",
+  "jobCardSoftSkills": "Competenze Trasversali",
+  "jobCardNiceToHave": "Gradito",
+  "jobCardTapToSeeDetails": "Tocca per vedere i dettagli",
+  "jobCardNotSpecified": "Non specificato",
+  "jobCardInvalidDate": "Data non valida",
+  "jobCardNotAvailable": "N/A",
+  "jobCardNotFound": "Non trovato",
+
+  "workModeRemote": "Remoto",
+  "workModeHybrid": "Ibrido",
+  "workModeOnSite": "In sede",
+
+  "jobSearchTitle": "Ricerca Lavoro",
+  "jobSearchScrollToDiscover": "Scorri per scoprire più lavori",
+  "jobSearchNoInternetConnection": "Nessuna connessione internet",
+  "jobSearchNoJobsFound": "Nessun lavoro trovato",
+  "jobSearchCheckConnection": "Controlla la tua connessione e riprova",
+  "jobSearchTryAdjustingFilters": "Prova ad aggiustare i tuoi filtri o la query di ricerca",
+  "jobSearchRetry": "Riprova",
+  "jobSearchResetFilters": "Ripristina Filtri",
+  "jobSearchOfflineNotice": "Sei offline. La funzionalità di ricerca è limitata.",
+  "jobSearchNoInternetSnackbar": "Nessuna connessione internet. Controlla la tua rete e riprova.",
+  "jobSearchErrorLoading": "Errore nel caricamento dei lavori: {error}",
+  "jobSearchAddedToFavorites": "{jobName} aggiunto ai preferiti",
+  
+  "jobFiltersTitle": "Filtra Lavori",
+  "jobFiltersResetAll": "Ripristina Tutto",
+  "jobFiltersSearch": "Cerca",
+  "jobFiltersSearchPlaceholder": "Cerca lavori, titoli...",
+  "jobFiltersCompany": "Azienda",
+  "jobFiltersCompanyPlaceholder": "Inserisci nome azienda",
+  "jobFiltersLocation": "Posizione",
+  "jobFiltersLocationPlaceholder": "Inserisci posizione/paese",
+  "jobFiltersDuration": "Durata",
+  "jobFiltersField": "Campo",
+  "jobFiltersWorkMode": "Modalità di Lavoro",
+  "jobFiltersSkills": "Competenze",
+  "jobFiltersApplyFilters": "Applica Filtri",
+  "jobFiltersSelected": "Selezionato",
+  
+  "jobListItemKeySkills": "Competenze Chiave:",
+  "jobListItemRelatedFields": "Campi Correlati:",
+  "jobListItemViewDetails": "Vedi Dettagli",
+  "jobListItemSave": "Salva",
+  "jobListItemNotSpecified": "Non specificato",
+  "jobListItemInvalid": "Non valido",
+  "jobListItemExpired": "Scaduto",
+  "jobListItemToday": "Oggi",
+  "jobListItemTomorrow": "Domani",
+  "jobListItemDaysLeft": "{days}g rimasti",
+
+  "jobDetails": "Dettagli Lavoro",
+  "openInBrowser": "Apri nel browser",
+  "location": "Posizione",
+  "deadline": "Scadenza",
+  "workMode": "Modalità di Lavoro",
+  "salary": "Stipendio",
+  "duration": "Durata",
+  "monthsCount": "{count, plural, =1{1 mese} other{{count} mesi}}",
+  "timeCommitment": "Impegno Temporale",
+  "season": "Stagione",
+  "visaHelp": "Aiuto Visto",
+  "jobDetailsTitle": "Dettagli Lavoro",
+  "educationRequirements": "Requisiti Educativi",
+  "requiredDegree": "Laurea Richiesta",
+  "graduationYears": "Anni di Laurea",
+  "skillsAndQualifications": "Competenze e Qualifiche",
+  "technicalSkills": "Competenze Tecniche",
+  "softSkills": "Competenze Trasversali",
+  "languages": "Lingue",
+  "niceToHave": "Gradito",
+  "jobDescription": "Descrizione del Lavoro",
+  "requirements": "Requisiti",
+  "applyNow": "Candidati Ora",
+  "notSpecified": "Non specificato",
+  "expired": "Scaduto",
+  "today": "Oggi",
+  "tomorrow": "Domani",
+  "inDays": "Tra {count} giorni",
+  "monthDay": "{month, select, 1{Gen} 2{Feb} 3{Mar} 4{Apr} 5{Mag} 6{Giu} 7{Lug} 8{Ago} 9{Set} 10{Ott} 11{Nov} 12{Dic} other{}} {day}",
+  "invalidDate": "Data non valida"
 }
