--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -453,5 +453,101 @@
   "settingsTermsOfServicePageContactUs": "Neem Contact Op",
   "settingsTermsOfServicePageContactUsText": "Als u vragen heeft over deze Voorwaarden, neem dan contact met ons op via ",
   "settingsTermsOfServicePageLastUpdated": "Laatst bijgewerkt: 9 april 2025",
-  "settingsPageDeletingData": "Gegevens verwijderen..."
+  "settingsPageDeletingData": "Gegevens verwijderen...",
+
+  "jobCardSwiperWaitingForConnection": "Wachten op internetverbinding...",
+  "jobCardSwiperRetry": "Opnieuw proberen",
+  "jobCardSwiperLoadingRecommendations": "Baanaanbevelingen laden...",
+  "jobCardSwiperOfflineNotice": "Je bent offline. Sommige functies kunnen beperkt zijn.",
+  "jobCardDeadline": "Deadline:",
+  "jobCardJobDetails": "Baandetails",
+  "jobCardMonths": "maanden",
+  "jobCardEducationRequirements": "Opleidingseisen",
+  "jobCardRequiredLanguages": "Vereiste Talen",
+  "jobCardVisaSupport": "Visa Ondersteuning",
+  "jobCardRelatedFields": "Gerelateerde Velden",
+  "jobCardTapToSeeSkills": "Tik om vaardigheden te zien",
+  "jobCardSkillsRequirements": "Vaardigheden & Vereisten",
+  "jobCardTechnicalSkills": "Technische Vaardigheden",
+  "jobCardSoftSkills": "Zachte Vaardigheden",
+  "jobCardNiceToHave": "Gewenst",
+  "jobCardTapToSeeDetails": "Tik om details te zien",
+  "jobCardNotSpecified": "Niet gespecificeerd",
+  "jobCardInvalidDate": "Ongeldige datum",
+  "jobCardNotAvailable": "N/A",
+  "jobCardNotFound": "Niet gevonden",
+
+  "workModeRemote": "Op afstand",
+  "workModeHybrid": "Hybride",
+  "workModeOnSite": "Op locatie",
+
+  "jobSearchTitle": "Vacature Zoeken",
+  "jobSearchScrollToDiscover": "Scroll om meer vacatures te ontdekken",
+  "jobSearchNoInternetConnection": "Geen internetverbinding",
+  "jobSearchNoJobsFound": "Geen vacatures gevonden",
+  "jobSearchCheckConnection": "Controleer je verbinding en probeer opnieuw",
+  "jobSearchTryAdjustingFilters": "Probeer je filters of zoekquery aan te passen",
+  "jobSearchRetry": "Opnieuw proberen",
+  "jobSearchResetFilters": "Filters Resetten",
+  "jobSearchOfflineNotice": "Je bent offline. Zoekfunctionaliteit is beperkt.",
+  "jobSearchNoInternetSnackbar": "Geen internetverbinding. Controleer je netwerk en probeer opnieuw.",
+  "jobSearchErrorLoading": "Fout bij het laden van vacatures: {error}",
+  "jobSearchAddedToFavorites": "{jobName} toegevoegd aan favorieten",
+  
+  "jobFiltersTitle": "Vacatures Filteren",
+  "jobFiltersResetAll": "Alles Resetten",
+  "jobFiltersSearch": "Zoeken",
+  "jobFiltersSearchPlaceholder": "Zoek vacatures, titels...",
+  "jobFiltersCompany": "Bedrijf",
+  "jobFiltersCompanyPlaceholder": "Voer bedrijfsnaam in",
+  "jobFiltersLocation": "Locatie",
+  "jobFiltersLocationPlaceholder": "Voer locatie/land in",
+  "jobFiltersDuration": "Duur",
+  "jobFiltersField": "Vakgebied",
+  "jobFiltersWorkMode": "Werkmodus",
+  "jobFiltersSkills": "Vaardigheden",
+  "jobFiltersApplyFilters": "Filters Toepassen",
+  "jobFiltersSelected": "Geselecteerd",
+  
+  "jobListItemKeySkills": "Belangrijke Vaardigheden:",
+  "jobListItemRelatedFields": "Gerelateerde Vakgebieden:",
+  "jobListItemViewDetails": "Bekijk Details",
+  "jobListItemSave": "Opslaan",
+  "jobListItemNotSpecified": "Niet gespecificeerd",
+  "jobListItemInvalid": "Ongeldig",
+  "jobListItemExpired": "Verlopen",
+  "jobListItemToday": "Vandaag",
+  "jobListItemTomorrow": "Morgen",
+  "jobListItemDaysLeft": "{days}d over",
+
+  "jobDetails": "Baan Details",
+  "openInBrowser": "Openen in browser",
+  "location": "Locatie",
+  "deadline": "Deadline",
+  "workMode": "Werkwijze",
+  "salary": "Salaris",
+  "duration": "Duur",
+  "monthsCount": "{count, plural, =1{1 maand} other{{count} maanden}}",
+  "timeCommitment": "Tijdsbesteding",
+  "season": "Seizoen",
+  "visaHelp": "Visum Hulp",
+  "jobDetailsTitle": "Baan Details",
+  "educationRequirements": "Onderwijsvereisten",
+  "requiredDegree": "Vereiste Diploma",
+  "graduationYears": "Afstudeerjaren",
+  "skillsAndQualifications": "Vaardigheden & Kwalificaties",
+  "technicalSkills": "Technische Vaardigheden",
+  "softSkills": "Sociale Vaardigheden",
+  "languages": "Talen",
+  "niceToHave": "Wenselijk",
+  "jobDescription": "Baanbeschrijving",
+  "requirements": "Vereisten",
+  "applyNow": "Nu Solliciteren",
+  "notSpecified": "Niet gespecificeerd",
+  "expired": "Verlopen",
+  "today": "Vandaag",
+  "tomorrow": "Morgen",
+  "inDays": "Over {count} dagen",
+  "monthDay": "{month, select, 1{Jan} 2{Feb} 3{Maa} 4{Apr} 5{Mei} 6{Jun} 7{Jul} 8{Aug} 9{Sep} 10{Okt} 11{Nov} 12{Dec} other{}} {day}",
+  "invalidDate": "Ongeldige datum"
 }
