--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -454,5 +454,101 @@
   "settingsTermsOfServicePageContactUs": "Contactați-ne",
   "settingsTermsOfServicePageContactUsText": "Dacă aveți întrebări despre acești Termeni, vă rugăm să ne contactați la ",
   "settingsTermsOfServicePageLastUpdated": "Ultima actualizare: 9 aprilie 2025",
-  "settingsPageDeletingData": "Ștergere date..."
+  "settingsPageDeletingData": "Ștergere date...",
+
+  "jobCardSwiperWaitingForConnection": "Se așteaptă conexiunea la internet...",
+  "jobCardSwiperRetry": "Încearcă din nou",
+  "jobCardSwiperLoadingRecommendations": "Se încarcă recomandările de joburi...",
+  "jobCardSwiperOfflineNotice": "Ești offline. Unele funcții pot fi limitate.",
+  "jobCardDeadline": "Termen limită:",
+  "jobCardJobDetails": "Detalii Job",
+  "jobCardMonths": "luni",
+  "jobCardEducationRequirements": "Cerințe Educaționale",
+  "jobCardRequiredLanguages": "Limbi Necesare",
+  "jobCardVisaSupport": "Suport Viză",
+  "jobCardRelatedFields": "Domenii Conexe",
+  "jobCardTapToSeeSkills": "Atinge pentru a vedea abilitățile",
+  "jobCardSkillsRequirements": "Abilități și Cerințe",
+  "jobCardTechnicalSkills": "Abilități Tehnice",
+  "jobCardSoftSkills": "Abilități Sociale",
+  "jobCardNiceToHave": "De Dorit",
+  "jobCardTapToSeeDetails": "Atinge pentru a vedea detaliile",
+  "jobCardNotSpecified": "Nespecificat",
+  "jobCardInvalidDate": "Dată invalidă",
+  "jobCardNotAvailable": "N/A",
+  "jobCardNotFound": "Nu a fost găsit",
+
+  "workModeRemote": "La distanță",
+  "workModeHybrid": "Hibrid",
+  "workModeOnSite": "La birou",
+
+  "jobSearchTitle": "Căutare Locuri de Muncă",
+  "jobSearchScrollToDiscover": "Derulează pentru a descoperi mai multe locuri de muncă",
+  "jobSearchNoInternetConnection": "Fără conexiune la internet",
+  "jobSearchNoJobsFound": "Nu s-au găsit locuri de muncă",
+  "jobSearchCheckConnection": "Te rugăm să verifici conexiunea și să încerci din nou",
+  "jobSearchTryAdjustingFilters": "Încearcă să ajustezi filtrele sau termenul de căutare",
+  "jobSearchRetry": "Încearcă din nou",
+  "jobSearchResetFilters": "Resetează Filtrele",
+  "jobSearchOfflineNotice": "Ești offline. Funcționalitatea de căutare este limitată.",
+  "jobSearchNoInternetSnackbar": "Fără conexiune la internet. Te rugăm să verifici rețeaua și să încerci din nou.",
+  "jobSearchErrorLoading": "Eroare la încărcarea locurilor de muncă: {error}",
+  "jobSearchAddedToFavorites": "{jobName} adăugat la favorite",
+  
+  "jobFiltersTitle": "Filtrează Locurile de Muncă",
+  "jobFiltersResetAll": "Resetează Tot",
+  "jobFiltersSearch": "Caută",
+  "jobFiltersSearchPlaceholder": "Caută locuri de muncă, titluri...",
+  "jobFiltersCompany": "Companie",
+  "jobFiltersCompanyPlaceholder": "Introdu numele companiei",
+  "jobFiltersLocation": "Locația",
+  "jobFiltersLocationPlaceholder": "Introdu locația/țara",
+  "jobFiltersDuration": "Durata",
+  "jobFiltersField": "Domeniu",
+  "jobFiltersWorkMode": "Mod de Lucru",
+  "jobFiltersSkills": "Abilități",
+  "jobFiltersApplyFilters": "Aplică Filtrele",
+  "jobFiltersSelected": "Selectat",
+  
+  "jobListItemKeySkills": "Abilități Cheie:",
+  "jobListItemRelatedFields": "Domenii Conexe:",
+  "jobListItemViewDetails": "Vezi Detaliile",
+  "jobListItemSave": "Salvează",
+  "jobListItemNotSpecified": "Nespecificat",
+  "jobListItemInvalid": "Invalid",
+  "jobListItemExpired": "Expirat",
+  "jobListItemToday": "Astăzi",
+  "jobListItemTomorrow": "Mâine",
+  "jobListItemDaysLeft": "{days}z rămase",
+
+  "jobDetails": "Detalii Job",
+  "openInBrowser": "Deschide în browser",
+  "location": "Locație",
+  "deadline": "Termen limită",
+  "workMode": "Mod de Lucru",
+  "salary": "Salariu",
+  "duration": "Durată",
+  "monthsCount": "{count, plural, =1{1 lună} few{{count} luni} other{{count} luni}}",
+  "timeCommitment": "Angajament de Timp",
+  "season": "Sezon",
+  "visaHelp": "Ajutor Viză",
+  "jobDetailsTitle": "Detalii Job",
+  "educationRequirements": "Cerințe Educaționale",
+  "requiredDegree": "Diplomă Necesară",
+  "graduationYears": "Ani de Absolvire",
+  "skillsAndQualifications": "Abilități & Calificări",
+  "technicalSkills": "Abilități Tehnice",
+  "softSkills": "Abilități Sociale",
+  "languages": "Limbi",
+  "niceToHave": "Dorit",
+  "jobDescription": "Descrierea Job-ului",
+  "requirements": "Cerințe",
+  "applyNow": "Aplică Acum",
+  "notSpecified": "Nespecificat",
+  "expired": "Expirat",
+  "today": "Astăzi",
+  "tomorrow": "Mâine",
+  "inDays": "În {count} zile",
+  "monthDay": "{month, select, 1{Ian} 2{Feb} 3{Mar} 4{Apr} 5{Mai} 6{Iun} 7{Iul} 8{Aug} 9{Sep} 10{Oct} 11{Noi} 12{Dec} other{}} {day}",
+  "invalidDate": "Dată invalidă"
 }
